edit c++ permalink to /cpp/

--- a/programming/cpp/index.html
+++ b/programming/cpp/index.html
@@ -1,6 +1,6 @@
 ---
 title: Interpreters and Compilers
-permalink: /programming/articles/interpreters-and-compilers/
+permalink: /programming/cpp/
 layout: default
 ---
 
