add stuff to intro to c++

--- a/programming/cpp/index.html
+++ b/programming/cpp/index.html
@@ -1,5 +1,5 @@
 ---
-title: C++ Introduction
+title: Introduction to C++
 permalink: /programming/cpp/
 layout: default
 ---
@@ -8,8 +8,10 @@ layout: default
 
 <section>
     <h2>What is C++?</h2>
+    <p>C++ is a low-level programming language which means that you can do things like directly manipulate memory.</p>
 </section>
 
 <section>
     <h2>How to Run C++?</h2>
+    <p>C++ is a compiled language which means that C++ takes your code and turns it into an executable.</p>
 </section>
