--- a/programming/python/functions.html
+++ b/programming/python/functions.html
@@ -8,13 +8,20 @@ permalink: /programming/python/functions/
 
 <section>
     <h2>What is a Function?</h2>
-    <p>A function is similar to a variable, but instead of storing numbers or text, it stores lines of code for Python to run.</p>
+    <p>A function is similar to a variable, but instead of storing numbers or text, it stores lines of code for Python to run. Just like we learned in math class, functions in Python can have inputs.</p>
 </section>
 
 <section>
     <h2>How to Make a Function?</h2>
+    <p>To make a function, we use <code>def</code>, which stands for "define". After that, we type a colon and press Enter. Then, Sublime Text should indent the next line. This is because Python uses indentation for seperating blocks of code and this includes functions.</p>
+</section>
+
+<section>
+    <h2>Function Arguments</h2>
+    <p>"Argument" is the fancy programmning term for input.</p>
 </section>
 
 <section>
     <h2>How to Run a Function?</h2>
+    <p></p>
 </section>
