whoops forgot something whaaa

--- a/programming/css/how-css-works.html
+++ b/programming/css/how-css-works.html
@@ -20,5 +20,5 @@ layout: css
   <br>
   <p>On the next line, we have <code><span style='color:#bb7977; font-weight:bold; '>font-family</span><span style='color:#808030; '>:</span> <span style='color:#074726; '>sans-serif</span><span style='color:#800080; '>;</span></code>. This means to make the <code>font-family</code>, or the font, a sans-serif font. We could've changed it to another font like <code>Segoe UI</code> to make it a different font.</p>
   <br>
-  <p>Finally, on the very last line, we end of with a closing curly bracket. This tells CSS to end our CSS statement and to begin a new one.</p>
+  <p>Finally, on the very last line, we end of with a closing curly bracket (<code>}</code>). This tells CSS to end our CSS statement and to begin a new one.</p>
 </section>
