--- a/programming/css/setup-css.html
+++ b/programming/css/setup-css.html
@@ -20,8 +20,10 @@ layout: css
         &nbsp;&nbsp;&nbsp;&nbsp;<span style='color:#bb7977; font-weight:bold; '>font-family</span><span style='color:#808030; '>:</span> <span style='color:#074726; '>sans-serif</span><span style='color:#800080; '>;</span><br>
       <span style='color:#800080; '>}</span></code>
       <p>Now, instead of your page looking like this: </p>
-      <img src="/images/programming/css/serif-website.png" alt="Serif Website">
+      <!--<img src="/images/programming/css/serif-website.png" alt="Serif Website">-->
+      <h1 style="font-family: serif">Welcome to My Website!</h1>
       <p>It should look like this: </p>
-      <img src="/images/programming/css/sans-serif-website.png" style="height: 40%;width:40%;" alt="Sans-Serif Website">
+      <!--<img src="/images/programming/css/sans-serif-website.png" style="height: 40%;width:40%;" alt="Sans-Serif Website">-->
+      <h1 style="font-family: sans-serif">Welcome to My Website!</h1>
     <p>We will discuss how this works in the next lesson.</p>
 </section>
