--- a/programming/css/setup-css.html
+++ b/programming/css/setup-css.html
@@ -21,9 +21,9 @@ layout: css
       <span style='color:#800080; '>}</span></code>
       <p>Now, instead of your page looking like this: </p>
       <!--<img src="/images/programming/css/serif-website.png" alt="Serif Website">-->
-      <h1 style="font-family: serif">Welcome to My Website!</h1>
+      <h1 style="font-family: serif">Welcome to My Website!</h1><br>
       <p>It should look like this: </p>
       <!--<img src="/images/programming/css/sans-serif-website.png" style="height: 40%;width:40%;" alt="Sans-Serif Website">-->
-      <h1 style="font-family: sans-serif">Welcome to My Website!</h1>
+      <h1 style="font-family: sans-serif">Welcome to My Website!</h1><br>
     <p>We will discuss how this works in the next lesson.</p>
 </section>
