colorize python code

--- a/programming/python/functions.html
+++ b/programming/python/functions.html
@@ -16,16 +16,16 @@ permalink: /programming/python/functions/
     <p>To make a function, we use <code>def</code>, which stands for "define". After that, we type our function name, which in this case is <code>helloWorld</code> and type a pair of parentheses (<code>()</code>). After that, we type a colon and press enter. Then, Sublime Text should indent the next line. This is because Python uses indentation for seperating blocks of code and this includes functions.</p>
     <small>Note: You cannot put a space in the middle of a function name.</small>
     <img src="/images/programming/python/functions-1.png" alt="Making a Python function in Sublime Text">
-    <p>Then, inside of our function we can type <code>print("Hello World!")</code>. This tells Python that whenever we run the <code>helloWorld</code> function, we want to print <samp>Hello World!</samp>. </p>
+    <p>Then, inside of our function we can type <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>print</span><span style='color:#808030; '>(</span><span style='color:#0000e6; '>"Hello World!"</span><span style='color:#808030; '>)</span>
+    </pre>. This tells Python that whenever we run the <code>helloWorld</code> function, we want to print <samp>Hello World!</samp>. </p>
 </section>
 
 <section>
     <h2>Function Arguments and Parameters</h2>
     <p>When we are making our function, we can make our function have specific inputs so that when we use our function. These are called arguments. Then, when we run our functions, we can pass in the arguments we just defined as parameters. We can do it as follows:</p>
-    <pre><code>
-def helloWorld(argument1, argument2, argument3, .....):
-    # do something
-    </code></pre>
+    <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>def</span> helloWorld<span style='color:#808030; '>(</span>argument1<span style='color:#808030; '>,</span> argument2<span style='color:#808030; '>,</span> argument3<span style='color:#808030; '>,</span> <span style='color:#808030; '>.</span><span style='color:#808030; '>.</span><span style='color:#808030; '>.</span><span style='color:#808030; '>.</span><span style='color:#808030; '>.</span><span style='color:#808030; '>)</span><span style='color:#808030; '>:</span>
+        <span style='color:#696969; '># do something</span>
+    </pre>
     <p>We put the arguments in the parentheses and seperate them by commas. Then, we can use the arguments as if they were variables. If we put nothing in the parentheses, that tells Python that we're passing in no arguments.</p>
 </section>
 
