Expand functions tutorial

--- a/programming/python/functions.html
+++ b/programming/python/functions.html
@@ -16,7 +16,7 @@ permalink: /programming/python/functions/
     <p>To make a function, we use <code>def</code>, which stands for "define". After that, we type our function name, which in this case is <code>helloWorld</code> and type a pair of parentheses (<code>()</code>). After that, we type a colon and press enter. Then, Sublime Text should indent the next line. This is because Python uses indentation for seperating blocks of code and this includes functions.</p>
     <small>Note: You cannot put a space in the middle of a function name.</small><br>
     <img src="/images/programming/python/functions-1.png" alt="Making a Python function in Sublime Text" style="height:60px !important">
-    <p>Then, inside of our function we can type <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>print</span><span style='color:#808030; '>(</span><span style='color:#0000e6; '>"Hello World!"</span><span style='color:#808030; '>)</span></pre>. This tells Python that whenever we run the <code>helloWorld</code> function, we want to print <samp>Hello World!</samp>. </p>
+    <p>Then, inside of our function we can type <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>print</span><span style='color:#808030; '>(</span><span style='color:#0000e6; '>"Hello World!"</span><span style='color:#808030; '>)</span></pre>. This tells Python that whenever we run the <code>helloWorld</code> function, we want to print <samp>Hello World!</samp>.</p>
 </section>
 
 <section>
@@ -30,5 +30,7 @@ permalink: /programming/python/functions/
 
 <section>
     <h2>Running a Function</h2>
-    <p>Running a function quite similar to making a function, but we don't use <code>def</code> and we don't type anything after the parentheses. For example, we could call the <code>helloWorld</code> fucntion we made earlier by typing <code>helloWorld()</code>.</p>
+    <p>Running a function quite similar to making a function, but we don't use <code>def</code> and we don't type anything after the parentheses. For example, we could call the <code>helloWorld</code> fucntion we made earlier by typing <code>helloWorld()</code>. When we run it, we get <samp>Hello World!</samp>.</p>
+    <small>Note: The number of arguments made when you are making the must be the same as the number of parameters you pass in while running it.</small>
+    <small>Note: You must run your function after you have made it. This is because Python runs the code line by line.</small>
 </section>
