added returning section to functions tutorial

--- a/programming/python/functions.html
+++ b/programming/python/functions.html
@@ -34,3 +34,14 @@ permalink: /programming/python/functions/
     <small>Note: The number of arguments made when you are making the must be the same as the number of parameters you pass in while running it.</small>
     <small>Note: You must run your function after you have made it. This is because Python runs the code line by line.</small>
 </section>
+
+<section>
+    <h2>Returning</h2>
+    <p>When we are programming, we often want our functions to return something. We can do this in Python by using the <code>return</code> keyword. In our function code, we simply type <code>return [value]</code>, which will return the value. As an example, let's modify our <code>helloWorld</code> function to return "Hello World!" instead of printing it. To do this, we type the following: </p>
+    <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>def</span> helloWorld<span style='color:#808030; '>(</span><span style='color:#808030; '>)</span><span style='color:#808030; '>:</span>
+	<span style='color:#800000; font-weight:bold; '>return</span> <span style='color:#0000e6; '>"Hello World!"</span>
+    </pre>
+    <p>Then, we can print the result of the function: </p>
+    <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>print</span><span style='color:#808030; '>(</span>helloWorld<span style='color:#808030; '>(</span><span style='color:#808030; '>)</span><span style='color:#808030; '>)</span></pre>
+    <p>As expected, we get back <samp>Hello World!</samp>.</p>
+</section>
