expand functions tutorial

--- a/programming/python/functions.html
+++ b/programming/python/functions.html
@@ -45,3 +45,27 @@ permalink: /programming/python/functions/
     <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>print</span><span style='color:#808030; '>(</span>helloWorld<span style='color:#808030; '>(</span><span style='color:#808030; '>)</span><span style='color:#808030; '>)</span></pre>
     <p>As expected, we get back <samp>Hello World!</samp>.</p>
 </section>
+
+<section>
+    <h2>Default Parameters</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Arbitrary Arguments</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>(Arbitrary) Keyword Arguments</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>The <code>pass</code> statement</h2>
+    <p>Sometimes you just want an empty function. However, Python won't let you do that and putting in a comment won't work either. So, we use <code>pass</code>. Simply put <code>pass</code> as the code in your function and Python will do nothing: </p>
+    <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>def</span> emptyFunction<span style='color:#808030; '>(</span><span style='color:#808030; '>)</span><span style='color:#808030; '>:</span>
+        <span style='color:#800000; font-weight:bold; '>pass</span>
+    emptyFunction<span style='color:#808030; '>(</span><span style='color:#808030; '>)</span>
+    </pre>
+</section>
