--- a/programming/python/functions.html
+++ b/programming/python/functions.html
@@ -48,12 +48,24 @@ permalink: /programming/python/functions/
 
 <section>
     <h2>Default Parameters</h2>
-    <p></p>
+    <p>We can set default parameters as following:</p>
+    <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>def</span> greet<span style='color:#808030; '>(</span>name<span style='color:#808030; '>=</span><span style='color:#0000e6; '>"Learnmonkey"</span><span style='color:#808030; '>)</span><span style='color:#808030; '>:</span>
+        <span style='color:#800000; font-weight:bold; '>print</span><span style='color:#808030; '>(</span><span style='color:#0000e6; '>"Hello "</span> <span style='color:#44aadd; '>+</span> name<span style='color:#808030; '>)</span>
+    greet<span style='color:#808030; '>(</span><span style='color:#808030; '>)</span>
+    </pre>
+    <p>The output of the code is <samp>Hello Learnmonkey</samp>.</p>
 </section>
 
 <section>
-    <h2>Arbitrary Arguments</h2>
-    <p></p>
+    <h2>Arbitrary Arguments (<code>*args</code>)</h2>
+    <p>In Python, we can have as many arguments as we want by putting <code>*args</code> as one of the arguments, where <code>args</code> is a tuple with all of the arguments. Below is an example: </p>
+    <small>Note: We reference the <code>*args</code> by typing <code>args</code> not <code>*args</code>.</small>
+    <pre style="color:#000000;background:#ffffff;"><span style="color:#800000; font-weight:bold; ">def</span> argsTest<span style="color:#808030; ">(</span><span style="color:#44aadd; ">*</span>args<span style="color:#808030; ">)</span><span style="color:#808030; ">:</span>
+        <span style="color:#800000; font-weight:bold; ">print</span><span style="color:#808030; ">(</span>args<span style="color:#808030; ">)</span>
+    argsTest<span style="color:#808030; ">(</span><span style="color:#808030; ">)</span>
+    </pre>
+    <p>The output of the code is <samp>(1, 2.1, 3)</samp>.</p>
+    <small>Note: We could rename <code>*args</code> to <code>*nums</code> or anything else. The only thing that matters in the asterisk in front. It is customary to use <code>*args</code>.</small>
 </section>
 
 <section>
