--- a/programming/cpp/index.html
+++ b/programming/cpp/index.html
@@ -8,10 +8,29 @@ layout: default
 
 <section>
     <h2>What is C++?</h2>
-    <p>C++ is a low-level programming language which means that you can do things like directly manipulate memory.</p>
+    <p>C++ is a low-level programming language which means that you can do things like directly manipulate memory. C++ is based on the C programming language, except C++ has classes and other things.</p>
+    <img src="/images/programming/cpp/cpp-logo.png" alt="C++ Logo">
+</section>
+
+<section>
+    <h2>History</h2>
+    <p>C++ is older than many other programming languages, being first released in 1985. C++ was created by Bjarne Stroustrup.</p>
+</section>
+
+<section>
+    <h2>Uses</h2>
+    <p>C++ is very fast, so C++ is used in places where speed and efficiency in very important: </p>
+    <ul>
+        <li>Games</li>
+        <li>Operating Systems</li>
+        <li>Animation</li>
+        <li>Databases</li>
+        <li>Compilers</li>
+        <li>And more!</li>
+    </ul>
 </section>
 
 <section>
     <h2>How to Run C++?</h2>
-    <p>C++ is a compiled language which means that C++ takes your code and turns it into an executable.</p>
+    <p>C++ is a compiled language which means that C++ takes your code and turns it into an executable, which is machine code that your computer can natively understand, no compiler or interpreter needed. Then, we run the executable.</p>
 </section>
