--- a/programming/python/functions.html
+++ b/programming/python/functions.html
@@ -26,7 +26,56 @@ permalink: /programming/python/functions/
     <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>def</span> helloWorld<span style='color:#808030; '>(</span>argument1<span style='color:#808030; '>,</span> argument2<span style='color:#808030; '>,</span> argument3<span style='color:#808030; '>,</span> <span style='color:#808030; '>.</span><span style='color:#808030; '>.</span><span style='color:#808030; '>.</span><span style='color:#808030; '>.</span><span style='color:#808030; '>.</span><span style='color:#808030; '>)</span><span style='color:#808030; '>:</span>
         <span style='color:#696969; '># do something</span>
     </pre>
-    <p>We put the arguments in the parentheses and seperate them by commas. Then, we can use the arguments as if they were variables. If we put nothing in the parentheses, that tells Python that we're passing in no arguments. However, if the arguments were needed and not optional, Python would throw an error because you didn't pass the appropriate arguments. It would also throw an error if you passed too many or too less than the required number of arguments.</p>
+    <p>Running a function quite similar to making a function, but we don't use <code>def</code> and we don't type anything after the parentheses. For example, we could call the <code>helloWorld</code> fucntion we made earlier by typing <code>helloWorld()</code>. When we run it, we get <samp>Hello World!</samp>.</p>
+    <small>Note: The number of arguments made when you are making the must be the same as the number of parameters you pass in while running it.</small>
+    <small>Note: You must run your function after you have made it. This is because Python runs the code line by line.</small>
+</section>
+
+<section>
+    <h2>Returning</h2>
+    <p>When we are programming, we often want our functions to return something. We can do this in Python by using the <code>return</code> keyword. In our function code, we simply type <code>return [value]</code>, which will return the value. As an example, let's modify our <code>helloWorld</code> function to return "Hello World!" instead of printing it. To do this, we type the following: </p>
+    <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>def</span> helloWorld<span style='color:#808030; '>(</span><span style='color:#808030; '>)</span><span style='color:#808030; '>:</span>
+	<span style='color:#800000; font-weight:bold; '>return</span> <span style='color:#0000e6; '>"Hello World!"</span>
+    </pre>
+    <p>Then, we can print the result of the function: </p>
+    <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>print</span><span style='color:#808030; '>(</span>helloWorld<span style='color:#808030; '>(</span><span style='color:#808030; '>)</span><span style='color:#808030; '>)</span></pre>
+    <p>As expected, we get back <samp>Hello World!</samp>.</p>
+</section>
+
+<section>
+    <h2>Default Parameters</h2>
+    <p>We can set default parameters as following:</p>
+    <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>def</span> greet<span style='color:#808030; '>(</span>name<span style='color:#808030; '>=</span><span style='color:#0000e6; '>"Learnmonkey"</span><span style='color:#808030; '>)</span><span style='color:#808030; '>:</span>
+        <span style='color:#800000; font-weight:bold; '>print</span><span style='color:#808030; '>(</span><span style='color:#0000e6; '>"Hello "</span> <span style='color:#44aadd; '>+</span> name<span style='color:#808030; '>)</span>
+    greet<span style='color:#808030; '>(</span><span style='color:#808030; '>)</span>
+    </pre>
+    <p>The output of the code is <samp>Hello Learnmonkey</samp>.</p>
+</section>
+
+<section>
+    <h2>Arbitrary Arguments (<code>*args</code>)</h2>
+    <p>In Python, we can have as many arguments as we want by putting <code>*args</code> as one of the arguments, where <code>args</code> is a tuple with all of the arguments. Below is an example: </p>
+    <small>Note: We reference the <code>*args</code> by typing <code>args</code> not <code>*args</code>.</small>
+    <pre style="color:#000000;background:#ffffff;"><span style="color:#800000; font-weight:bold; ">def</span> argsTest<span style="color:#808030; ">(</span><span style="color:#44aadd; ">*</span>args<span style="color:#808030; ">)</span><span style="color:#808030; ">:</span>
+        <span style="color:#800000; font-weight:bold; ">print</span><span style="color:#808030; ">(</span>args<span style="color:#808030; ">)</span>
+    argsTest<span style="color:#808030; ">(</span><span style="color:#808030; ">)</span>
+    </pre>
+    <p>The output of the code is <samp>(1, 2.1, 3)</samp>.</p>
+    <small>Note: We could rename <code>*args</code> to <code>*nums</code> or anything else. The only thing that matters in the asterisk in front. It is customary to use <code>*args</code>.</small>
+</section>
+
+<section>
+    <h2>(Arbitrary) Keyword Arguments</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>The <code>pass</code> statement</h2>
+    <p>Sometimes you just want an empty function. However, Python won't let you do that and putting in a comment won't work either. So, we use <code>pass</code>. Simply put <code>pass</code> as the code in your function and Python will do nothing: </p>
+    <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>def</span> emptyFunction<span style='color:#808030; '>(</span><span style='color:#808030; '>)</span><span style='color:#808030; '>:</span>
+        <span style='color:#800000; font-weight:bold; '>pass</span>
+    emptyFunction<span style='color:#808030; '>(</span><span style='color:#808030; '>)</span>
+    </pre>
 </section>
 
 <section>
