--- a/programming/html/your-first-html-website.html
+++ b/programming/html/your-first-html-website.html
@@ -8,7 +8,7 @@ layout: default
 
 <section>
     <h2>Writing the Code</h2>
-    <p>Our code will look as follows: </p>e
+    <p>Our code will look as follows: </p>
     <pre style="color:#000000;background:#ffffff;"><span style="color:#004a43; ">&lt;!DOCTYPE html&gt;</span>
     <span style="color:#a65700; ">&lt;</span><span style="color:#800000; font-weight:bold; ">html</span><span style="color:#a65700; ">&gt;</span>
         <span style="color:#a65700; ">&lt;</span><span style="color:#800000; font-weight:bold; ">head</span><span style="color:#a65700; ">&gt;</span>
