html jekyll layout

--- a/programming/html/index.html
+++ b/programming/html/index.html
@@ -1,7 +1,7 @@
 ---
 title: Introduction to HTML
 permalink: /programming/html/
-layout: default
+layout: html
 ---
 
 <h1>Introduction to HTML</h1>
