--- a/programming/html/your-first-html-website.html
+++ b/programming/html/your-first-html-website.html
@@ -1,7 +1,7 @@
 ---
 title: Your First HTML Website
 permalink: /programming/html/your-first-html-website/
-layout: default
+layout: html
 ---
 
 <h1>Your First HTML Website</h1>
