expand your first html website tutorial

--- a/programming/html/your-first-html-website.html
+++ b/programming/html/your-first-html-website.html
@@ -5,6 +5,15 @@ layout: html
 ---
 
 <h1>Your First HTML Website</h1>
+<p>Now, it's time tot get our hands dirty and write some real code and open it in the web browser.</p>
+
+<section>
+    <h2>Environment Setup</h2>
+    <p>Code editors are a great way to increase your efficiency and are also great for beginners. <a target="_blank" href="https://www.sublimetext.com">Sublime Text</a> is a great and easy-to-use text editor that we will be installing in this tutorial.</a></p>
+    <p>After navigating to the <a href="https://www.sublimetext.com/download" target="_blank">Download</a> page, you will want to download the file for your computer. Once the file is downloaded, simply run it and go through all of the prompts. At the end, if it closes successfully, you should have Sublime Text installed correctly!</a></p>
+    <p>To Open Sublime Text, just find it as you would any other app.</p>
+    <h3>Congratulations! It's time to start coding!</h3>
+</section>
 
 <section>
     <h2>Writing the Code</h2>
@@ -20,6 +29,16 @@ layout: html
         <span style="color:#a65700; ">&lt;/</span><span style="color:#800000; font-weight:bold; ">body</span><span style="color:#a65700; ">&gt;</span>
     <span style="color:#a65700; ">&lt;/</span><span style="color:#800000; font-weight:bold; ">html</span><span style="color:#a65700; ">&gt;</span>
     </pre>
+    <p>Copy it and put it in Sublime Text: </p>
+    <img src="/images/programming/html/sublime-text-1.png" alt="Putting our HTML code in Sublime Text">
+    <p>Then, hit the <kbd>Ctrl</kbd> and <kbd>S</kbd> keys at the same time. You should see the following window pop up: </p>
+    <img src="/images/programming/python/sublime-text-2.png" alt="The Sublime Text Save window">
+    <p>Navigate to the folder where you want your HTML file to be and enter a name for the file. It's important that it ends in ".html". If you don't end in that way, your browser won't display the code as HTML code.</p>
+    <p>After you have saved your file, right click and select "Copy File Path". Then, paste (<kbd>Ctrl+V</kbd>) what you have just copied into your web browser's address bar. Then, you should see the following: </p>
+    <div style="font-family: serif">
+        <h1>Welcome To My Website!</h1>
+        <p>Hello World!</p><br>
+    </div>
 </section>
 
 <section>
