--- a/programming/python/functions.html
+++ b/programming/python/functions.html
@@ -86,7 +86,11 @@ pizza</samp></pre>
 
 <section>
     <h2>Arbitrary Keyword Arguments (<code>**kwargs</code>)</h2>
-    <p></p>
+    <p>In Python, we have another similar thing to <code>*args</code> which is <code>**kwargs</code>. It's similar in the sense that they start with asterisks, only that <code>**kwargs</code> has two asterisks but with <code>**kwargs</code>, but <code>**kwargs</code> takes arguments as seperate parameters. For example, if I have the cod
+        <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>def</span> my_function<span style='color:#808030; '>(</span><span style='color:#44aadd; '>**</span>stuff<span style='color:#808030; '>)</span><span style='color:#808030; '>:</span>
+            <span style='color:#800000; font-weight:bold; '>print</span><span style='color:#808030; '>(</span>stuff<span style='color:#808030; '>)</span>
+        my_function<span style='color:#808030; '>(</span>random<span style='color:#808030; '>=</span><span style='color:#008c00; '>2765</span><span style='color:#808030; '>,</span> thing<span style='color:#808030; '>=</span><span style='color:#0000e6; '>"gega"</span><span style='color:#808030; '>,</span> my_name<span style='color:#808030; '>=</span><span style='color:#0000e6; '>"monkey"</span><span style='color:#808030; '>)</span>
+        </pre>
 </section>
 
 <section>
