expand flask intro

--- a/programming/python/flask/index.html
+++ b/programming/python/flask/index.html
@@ -8,6 +8,14 @@ permalink: /programming/python/flask/
 
 <section>
     <h2>What is Flask?</h2>
-    <p>Flask is a super lightweight microframework for creating web applications with Python. It's super easy to get started.</p>
+    <p>Flask is a super lightweight microframework for creating web applications with Python. It's super easy to get started. However, Flask, unlike something like Django, does not have features like authentication built in. You need to import other modules to do that.</p>
     <img src="/images/programming/python/flask/flask-logo.png" alt="Flask Logo">
+</section>
+
+<section>
+    <h2>Prerequisites</h2>
+    <ul>
+        <li>Experience with Python</li>
+        <li>Web Browser</li>
+    </ul>
 </section>
