--- a/programming/python/functions.html
+++ b/programming/python/functions.html
@@ -81,16 +81,18 @@ favoriteFoods<span style="color:#808030; ">(</span>food2<span style="color:#8080
 bananas
 noodles
 pizza</samp></pre>
-    <p>As we can see, the order in which the parameters were placed didn't matter.</p>
+    <p>As we can see, the order in which the parameters were placed doesn't matter.</p>
 </section>
 
 <section>
     <h2>Arbitrary Keyword Arguments (<code>**kwargs</code>)</h2>
-    <p>In Python, we have another similar thing to <code>*args</code> which is <code>**kwargs</code>. It's similar in the sense that they start with asterisks, only that <code>**kwargs</code> has two asterisks but with <code>**kwargs</code>, but <code>**kwargs</code> takes arguments as seperate parameters. For example, if I have the cod
+    <p>In Python, we have another similar thing to <code>*args</code> which is <code>**kwargs</code>. It's similar in the sense that they start with asterisks, only that <code>**kwargs</code> has two asterisks but with <code>**kwargs</code>, but <code>**kwargs</code> takes arguments as seperate parameters. For example, if I have the code</p>
+    <small>Fun fact: the <code>kw</code> in <code>kwargs</code> stands for <b>k</b>eyword <b>a</b>rguments.</small>
         <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>def</span> my_function<span style='color:#808030; '>(</span><span style='color:#44aadd; '>**</span>stuff<span style='color:#808030; '>)</span><span style='color:#808030; '>:</span>
             <span style='color:#800000; font-weight:bold; '>print</span><span style='color:#808030; '>(</span>stuff<span style='color:#808030; '>)</span>
         my_function<span style='color:#808030; '>(</span>random<span style='color:#808030; '>=</span><span style='color:#008c00; '>2765</span><span style='color:#808030; '>,</span> thing<span style='color:#808030; '>=</span><span style='color:#0000e6; '>"gega"</span><span style='color:#808030; '>,</span> my_name<span style='color:#808030; '>=</span><span style='color:#0000e6; '>"monkey"</span><span style='color:#808030; '>)</span>
         </pre>
+    <p><code>**kwargs</code> returns a dictionary with the keys being the names of the keyword arguments and the values of the keys represent the values of the parameters.</p>
 </section>
 
 <section>
