--- a/programming/python/functions.html
+++ b/programming/python/functions.html
@@ -92,7 +92,7 @@ pizza</samp></pre>
             <span style='color:#800000; font-weight:bold; '>print</span><span style='color:#808030; '>(</span>stuff<span style='color:#808030; '>)</span>
 my_function<span style='color:#808030; '>(</span>random<span style='color:#808030; '>=</span><span style='color:#008c00; '>2765</span><span style='color:#808030; '>,</span> thing<span style='color:#808030; '>=</span><span style='color:#0000e6; '>"gega"</span><span style='color:#808030; '>,</span> my_name<span style='color:#808030; '>=</span><span style='color:#0000e6; '>"monkey"</span><span style='color:#808030; '>)</span>
         </pre>
-    <p>After running that code, the output is the dictionary:</p>
+    <p>After running that code, we get a dictionary, where the keys are the names of the keyword arguments and the values are the values:</p>
     <pre style='color:#000000;background:#ffffff;'><span style='color:#800080; '>{</span><span style='color:#0000e6; '>'random'</span><span style='color:#808030; '>:</span> <span style='color:#008c00; '>2765</span><span style='color:#808030; '>,</span> <span style='color:#0000e6; '>'thing'</span><span style='color:#808030; '>:</span> <span style='color:#0000e6; '>'gega'</span><span style='color:#808030; '>,</span> <span style='color:#0000e6; '>'my_name'</span><span style='color:#808030; '>:</span> <span style='color:#0000e6; '>'monkey'</span><span style='color:#800080; '>}</span>
     </pre>
 </section>
