add tutorials index

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 
 <section>
     <h1>Hello and welcome to Learnmonkey!</h1>
-    <p>Welcome to the Learnmonkey website! Currently, Learnmonkey has only programming lessons, but we will be expanding to more subjects soon. You can find lessons in the navbar.</p>
+    <p>Welcome to the Learnmonkey website! Currently, Learnmonkey has only programming lessons, but we will be expanding to more subjects soon. You can find lessons in the navbar or find one in <a href="/tutorial-index/">tutorial index</a>.</p>
 </section>
 
 <section>
