god damning typos be like >:| oooooooooooof

--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -6,7 +6,7 @@ layout: default
 
 <h1>Tutorial Index</h1>
 <ul>
-    <li><a href="/programing/">Programming</a>
+    <li><a href="/programming/">Programming</a>
         <ul>
             <li><a href="/programming/python/">Python</a>
                 <ul>
