--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -16,7 +16,7 @@ layout: default
             <li><a href="/programming/html/">HTML</a></li>
             <li><a href="/programming/css/">CSS</a></li>
             <li><a href="/programming/javascript/">JavaScript</a></li>
-            <li><a href="/programmming/cpp/">C++</a></li>
+            <li><a href="/programming/cpp/">C++</a></li>
             <li><a href="/programming/java/">Java</a></li>
         </ul>
     </li>
