--- a/programming/cpp/index.html
+++ b/programming/cpp/index.html
@@ -14,12 +14,12 @@ layout: default
 
 <section>
     <h2>History</h2>
-    <p>C++ is older than many other programming languages, being first released in 1985. C++ was created by Bjarne Stroustrup.</p>
+    <p>C++ is older than many other programming languages, being first released in 1985. C++ was created by Bjarne Stroustrup as the successor to C.</p>
 </section>
 
 <section>
     <h2>Uses</h2>
-    <p>C++ is very fast, so C++ is used in places where speed and efficiency in very important: </p>
+    <p>C++ is very fast, so it is used in places where speed and efficiency are very important: </p>
     <ul>
         <li>Games</li>
         <li>Operating Systems</li>
