remove extra phrase no one needs

--- a/programming/python/flask/setup.html
+++ b/programming/python/flask/setup.html
@@ -15,7 +15,7 @@ layout: flask
 <section>
     <h2>Installing a Code Editor</h2>
     <small>You can skip this section if you already have a code editor installed.</small>
-    <p>Code editors are a great way to increase your efficiency and are also great for beginners. When we are coding <a target="_blank" href="https://www.sublimetext.com">Sublime Text</a> is a great and easy-to-use text editor that we will be installing in this tutorial.</a></p>
+    <p>Code editors are a great way to increase your efficiency and are also great for beginners. <a target="_blank" href="https://www.sublimetext.com">Sublime Text</a> is a great and easy-to-use text editor that we will be installing in this tutorial.</a></p>
     <p>After navigating to the <a href="https://www.sublimetext.com/download" target="_blank">Download</a> page, you will want to download the file for your computer. Once the file is downloaded, simply run it and go through all of the prompts. At the end, if it closes successfully, you should have Sublime Text installed correctly!</a></p>
     <p>To open Sublime Text, just find it as you would any other app.</p>
     <h3>Congratulations! It's time to start coding!</h3>
