--- a/programming/cpp/index.html
+++ b/programming/cpp/index.html
@@ -26,7 +26,7 @@ layout: default
         <li>Animation</li>
         <li>Databases</li>
         <li>Compilers</li>
-        <li>And more!</li>
+        <li>And much more!</li>
     </ul>
 </section>
 
