running the code

--- a/programming/python/flask/your-first-flask-website.html
+++ b/programming/python/flask/your-first-flask-website.html
@@ -22,5 +22,9 @@ layout: flask
 
 <section>
     <h2>Running the Code</h2>
-    <p>We can run the code like we run a </p>
+    <p>We can run the code like we run a normal Python program. Then, you should be able to go to <a href="localhost:8080">localhost:8080</a> and see <samp>Hello World!</samp> in the browser window.</p>
+</section>
+
+<section>
+  <h2>Code Breakdown</h2>
 </section>
