--- a/programming/index.html
+++ b/programming/index.html
@@ -16,7 +16,7 @@ layout: default
 </section>
 
 <section>
-    <p>In addition to programming tutorials, we have a few <a href="/programming/articles">programming articles</a>:</p>+
+    <p>In addition to programming tutorials, we have a few <a href="/programming/articles">programming articles</a>:</p>
     <ul>
         <li><a href="/programming/articles/interpreters-and-compilers">Interpreters and Compilers</a></li>
     </ul>
