add article to list

--- a/programming/index.html
+++ b/programming/index.html
@@ -18,7 +18,8 @@ layout: default
 <section>
     <p>In addition to programming tutorials, we have a few <a href="/programming/articles">programming articles</a>:</p>
     <ul>
-        <li><a href="/programming/articles/interpreters-and-compilers">Interpreters and Compilers</a></li>
+        <li><a href="/programming/articles/interpreters-and-compilers/">Interpreters and Compilers</a></li>
+        <li><a href="/programming/articles/editing-code/">Editing Code</a></li>
     </ul>
 </section>
 
