--- a/donating.html
+++ b/donating.html
@@ -5,4 +5,4 @@ layout: default
 ---
 
 <h1>Donating to Learnmonkey</h1>
-<p>Learnmonkey doesn't have ads and will remain without ads. Currently, we do not accept donations, but in the future we will. In the meantime, consider contributing to a local charity or sharing Learnmonkey with your friends!</p>
+<p>Learnmonkey doesn't have ads and will remain without ads. Currently, we do not accept donations, but in the future we will. In the meantime, consider contributing to a local charity and sharing Learnmonkey with your friends!</p>
