pygame update everything

--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -11,6 +11,7 @@ layout: default
             <li><a href="/programming/python/">Python</a>
                 <ul>
                     <li><a href="/programming/python/flask/">Flask</a></li>
+                    <li><a href="/programming/python/pygame/">Pygame</a></li>
                 </ul>
             </li>
             <li><a href="/programming/html/">HTML</a></li>
