--- a/programming/python/pygame/index.html
+++ b/programming/python/pygame/index.html
@@ -7,7 +7,13 @@ permalink: /programming/python/pygame/
 <h1>Introduction to Pygame</h1>
 
 <section>
-    <h2>What is Pygame</h2>
+    <h2>What is Pygame?</h2>
+    <p>Pygame is a simple-to-use Python module for 2D game development. It is the most used Python game development framework.</p> 
+</section>
+
+<section>
+    <h2>Why should I use Pygame?</h2>
+    <p>Since Pygame is so easy to set-up and start using, it's a great intro to simple Game Development in Python. Do note, however, it isn't that most advanced so if you want to development a really complex game, try using a Game Engine like Unity.</p> 
 </section>
 
 <section>
