--- a/programming/python/pygame/index.html
+++ b/programming/python/pygame/index.html
@@ -8,7 +8,8 @@ permalink: /programming/python/pygame/
 
 <section>
     <h2>What is Pygame?</h2>
-    <p>Pygame is a simple-to-use Python module for 2D game development. It is the most used Python game development framework.</p> 
+    <p>Pygame is a simple-to-use Python module for 2D game development. It is the most used Python game development framework.</p>
+    <img src="/images/programming/python/pygame/pygame-logo.gif" alt="Pygame Logo">
 </section>
 
 <section>
