--- a/programming/python/pygame/index.html
+++ b/programming/python/pygame/index.html
@@ -13,7 +13,7 @@ permalink: /programming/python/pygame/
 </section>
 
 <section>
-    <h2>Why should I use Pygame?</h2>
+    <h2>Why Use Pygame?</h2>
     <p>Since Pygame is so easy to set-up and start using, it's a great introduction to game development. However, it isn't that advanced, so if you want to development a really complex game, try using a game engine like Unity.</p> 
 </section>
 
